# invenio-employee-profiles

./: AUTHORS.rst  MANIFEST.in  run-tests.sh  setup.cfg
.tx/: config
docs/: api.rst  conf.py  index.rst  usage.rst
invenio_employee_profiles/: __init__.py  config.py  errors.py  ext.py  proxies.py  searchapp.py  webpack.py
invenio_employee_profiles/administration/views/: employee_profile.py
invenio_employee_profiles/alembic/: 232d55dac463_create_employee_profiles_file_table.py  3056d8ad5794_setup_of_employee_profiles.py  aa257b0369b5_create_employee_profiles_table.py  babfb2352efd_add_bucket_columns_to_employee_profile_.py
invenio_employee_profiles/assets/semantic-ui/js/invenio_employee_profiles/: index.js  search.js
invenio_employee_profiles/assets/semantic-ui/js/invenio_employee_profiles/employeeProfilesItems/: EmployeeProfileCompactItem.js  EmployeeProfileCompactItemComputer.js  EmployeeProfileCompactItemMobile.js  EmployeeProfileItem.js  EmployeeProfileItemComputer.js  EmployeeProfileItemMobile.js
invenio_employee_profiles/assets/semantic-ui/js/invenio_employee_profiles/searchComponents/: EmployeeProfilesEmptySearchResults.js  EmployeeProfilesResults.js  EmployeeProfilesSearchBarElement.js  EmployeeProfilesSearchLayout.js  index.js
invenio_employee_profiles/assets/semantic-ui/translations/invenio_employee_profiles/: package-lock.json  translations.pot
invenio_employee_profiles/assets/semantic-ui/translations/invenio_employee_profiles/i18n/en/: translation.json
invenio_employee_profiles/assets/semantic-ui/translations/invenio_employee_profiles/messages/en/: translations.json
invenio_employee_profiles/assets/semantic-ui/translations/invenio_employee_profiles/messages/zh_CN/: translations.json
invenio_employee_profiles/files/: api.py  models.py
invenio_employee_profiles/records/: api.py  models.py
invenio_employee_profiles/records/mappings/os-v2/employeeprofiles/: employeeprofile-v1.0.0.json
invenio_employee_profiles/resources/: __init__.py  config.py  resource.py
invenio_employee_profiles/resources/files/: config.py  resource.py
invenio_employee_profiles/services/: __init__.py  config.py  links.py  permissions.py  schema.py  service.py
invenio_employee_profiles/services/files/: config.py  service.py
invenio_employee_profiles/templates/semantic-ui/invenio_employee_profiles/: search.html
invenio_employee_profiles/translations/: messages.pot
invenio_employee_profiles/translations/fr/LC_MESSAGES/: messages.po
invenio_employee_profiles/translations/zh_tw/LC_MESSAGES/: messages.po
invenio_employee_profiles/views/: __init__.py  api.py  employee_profiles.py  ui.py
tests/: conftest.py  test_01_db_layer.py  test_02_record_layer.py  test_03_service_layer.py  test_04_resource_layer.py  test_05_files_resource_layer.py
